syntax = "proto3";
package proto;
option go_package = ".;proto";
import "msgenum.proto";
import "struct.proto";

message Notify {
  EntityInfoChangeNotify entityInfoChangeNotify = 1; //实体的属性变化通知
  GameGlobalInfoNotify gameGlobalInfoNotify = 2; //玩家加入时对玩家进行同步的所有消息
  TimeNotify time = 3; //对局时间信息通知
  MapInfo mapInfo = 4; //地图信息
  EnterGameNotify enterGameNotify  = 5; //进入游戏包
  HeroViewNotify heroViewNotify = 6; //小球视野管理
  GameFinishNotify gameFinishNotify = 7;
  GameRankListNotify gameRankListNotify = 8;
}

message EntityInfoChangeNotify {
  ENTITY_TYPE entityType = 1; //实体的类型
  int32 entityId = 2; //实体的Id
  HeroMsg HeroMsg = 3; //玩家的信息
  ItemMsg itemMsg = 4; //物体的信息
}

message EnterGameNotify {
  int32 playerId = 1; //玩家ID
//  HeroMsg HeroMsg = 2; //玩家的信息
  ConnectMsg clientConnectMsg = 2; //网络信息
}

message GameGlobalInfoNotify {
  int32 heroNumber = 1; //玩家数量
  int64 time = 2; //游戏对局中的时间(开始时间)
  repeated HeroMsg HeroMsg = 3; //对局中玩家的信息
  repeated ItemMsg ItemMsg = 4; //对局中道具的信息
  MapMsg mapMsg = 5; //地图信息
}

message TimeNotify { //对局时间信息通知
  int64 time = 1;
}

message MapInfo {
  MapMsg mapMsg = 1; //地图信息
}

message HeroViewNotify { // 视野通知，在玩家离开\进入灯塔的时候通知其他玩家
  int32 heroId = 1;
  VIEW_TYPE viewType = 2;
  HeroMsg heroMsg = 3;
}

message GameFinishNotify {
  repeated HeroRankMsg heroRankMsg = 1;
  int64 finishTime = 2;
}

message GameRankListNotify {
  repeated HeroRankMsg heroRankMsg = 1;
}

